playlist and videos visibility implemented. comment section replies to replies fixed

--- a/videohost/static/videos/css/styles.css
+++ b/videohost/static/videos/css/styles.css
@@ -550,7 +550,6 @@ main {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    background-color: #000;
     color: #fff;
     box-sizing: border-box;
 }
@@ -607,6 +606,15 @@ main {
 
 .video-card .info p:hover {
     color: #ffffff;
+}
+
+.info p {
+    color: #ccc;
+    transition: color 0.3s ease;
+}
+
+.info p:hover {
+    color: white;
 }
 
 .video-card .info .details {
@@ -1262,11 +1270,16 @@ input.error:focus {
 .playlist-title {
     font-size: 1.1rem;
     font-weight: bold;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .playlist-meta {
     font-size: 0.9rem;
     color: #ccc;
+    margin-top: -10px;
 }
 
 .no-playlists {
